add typewrite plugin and social links

--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
         <div class="container">
             <div class="header-content">
                 <h1>
-                    The Reel<br><span></span>
+                    I'm a <br><span class="typewrite" data-loop="yes" data-speed="100" data-delay="2000" data-words='[
+                    "photographer", "videographer"]'></span>
                 </h1>
                 <h2>
-                    Photography and Videography
+                    Darryl De Guzman
                 </h2>
+                <h3>
+                    The Reel Photography and Videography
+                </h3>
                 <ul class="social-links">
                     <li>
                         <a href="#" class="flex">
