add about me section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,40 @@
     </header>
     <!-- end of header-->
 
+    <!-- start of content -->
+    <main>
+        <!-- about section -->
+        <section id="about" class="about py-7">
+            <div class="container">
+                <div class="about-content grid">
+                    <div class="about-left">
+                        <img src="images/profile-pic2.jpg" alt="profile pic">
+                    </div>
+                    <div class="about-right">
+                        <div class="title">
+                            <h2>About Me</h2>
+                            <p class="lead">
+                                Originally from Baguio, Philippines, now based in Dublin, Ireland. <br>
+                                I am a nurse at heart and photography is my craft.
+                            </p>
+                            <p class="lead">
+                                You can check out my recent works and experiences below. <br> 
+                                I consider photography as my passion more than a profession.
+                            </p>
+                            <a href="#work" class="btn-down"><i class="fas fa-chevron-down"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- end of about section -->
+    </main>
+
+
+    <!-- end of content -->
+
+
 
     <!-- Typewriting js -->
     <script src="typewriting-master/typewriting.js"></script>
